Updating Old File for core commit 4de73fdd7f91d0a8511f3c113ecbff819362f1ac

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,10 +1,10 @@
 ---
-title: Notas de versão da Adobe Experience Platform de maio de 2023
-description: As notas de versão de maio de 2023 para Adobe Experience Platform.
+title: Notas da versão de maio de 2023 da Adobe Experience Platform
+description: As notas de versão de maio de 2023 da Adobe Experience Platform.
 source-git-commit: 871b9448288e11e2e21dfc1471a618fd7cad6c13
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1994'
-ht-degree: 5%
+ht-degree: 100%
 
 ---
 
@@ -14,19 +14,19 @@ ht-degree: 5%
 >
 >Em preparação para a disponibilidade geral do recurso Portal de público-alvo, a Adobe Experience Platform está atualizando o uso de “públicos-alvo” e “segmentos” no sistema e na documentação.
 >
->- **Público**: um conjunto de pessoas, contas, famílias ou outras entidades que compartilham características e comportamentos comuns.
+>- **Público-alvo**: um conjunto de pessoas, contas, famílias ou outras entidades que compartilham características e comportamentos comuns.
 >
->- **Definição de segmento**: no Adobe Experience Platform, as regras usadas para descrever as principais características ou comportamento de um público-alvo. Esse termo era anteriormente conhecido apenas como “segmento”.
+>- **Definição de segmento**: na Adobe Experience Platform, as regras usadas para descrever as principais características ou comportamentos de um público-alvo. Esse termo era anteriormente conhecido apenas como “segmento”.
 >
->- **Segmento**: o ato de separar perfis em públicos. O termo &quot;segmento&quot; agora é usado exclusivamente como verbo.
+>- **Segmentar**: o ato de separar perfis em públicos-alvo. O termo “segmentar” agora é usado exclusivamente como um verbo.
 >
->- **Segmentação**: o ato de identificar e articular as características dos perfis que serão agrupadas para produzir um conjunto de resultados, como uma audiência.
+>- **Segmentação**: o ato de identificar e articular as características dos perfis que serão agrupados para produzir um conjunto de resultados, como um público-alvo.
 >
->Como resultado, na interface do usuário do Adobe Experience Platform, &quot;Segmentos&quot; é substituído por &quot;Públicos-alvo&quot; para refletir esse novo caminho de criação e gerenciamento de público-alvo.
+>Como resultado, na interface da Adobe Experience Platform, o elemento “Segmentos” será substituído por “Públicos-alvo” para refletir esse novo processo de criação e gerenciamento de público-alvo.
 
 **Data de lançamento: 24 de maio de 2023**
 
-Atualizações dos recursos existentes na Adobe Experience Platform:
+Atualizações dos recursos já existentes na Adobe Experience Platform:
 
 - [Painéis](#dashboards)
 - [Coleção de dados](#data-collection)
@@ -35,12 +35,12 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 - [Destinos](#destinations)
 - [Experience Data Model (XDM)](#xdm)
 - [Identity Service](#identity-service)
-- [Serviço de query](#query-service)
+- [Query Service](#query-service)
 - [Fontes](#sources)
 
 ## Painéis {#dashboards}
 
-O Adobe Experience Platform fornece vários painéis por meio dos quais você pode visualizar insights importantes sobre os dados de sua organização, conforme capturados durante instantâneos diários.
+A Adobe Experience Platform fornece vários painéis para você visualizar insights importantes sobre os dados de sua organização, que são capturados por instantâneos diários.
 
 <!-- 
 The [!UICONTROL License Usage] dashboard and individual license data for customers has been updated to resolve previous discrepancies between the license entitlements recorded in the Sales Orders and those originally reported in the Experience Platform [!UICONTROL License Usage] dashboard. The updates of individual license data will happen in phases between June 2023 and June 11, 2023. Your actual usage values remain accurate.<br><br>Experience Platform provides multiple capabilities to manage the usage volume:<br><ul><li>[Review and apply best practices to manage data and license usage](https://experienceleague.adobe.com/docs/experience-platform/landing/license/data-management-best-practices.html)</li><li>Apply filtering rules and conditions to [selectively include or exclude data from ingestion to the Real-Time Customer Profile](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html#filtering-for-profile) for Analytics data before it is ingested into Profile.</li><li>[Contact Adobe support to apply expiration times for Pseudonymous Profiles.](https://experienceleague.adobe.com/docs/experience-platform/profile/pseudonymous-profiles.html)</li><li>[Contact Adobe support to enable Experience Event expirations on desired datasets.](https://experienceleague.adobe.com/docs/experience-platform/profile/event-expirations.html)</li><li>Contact your Adobe representative to discuss options to increase your license entitlements.</li></ul>
@@ -61,141 +61,141 @@ Contact your Adobe Support representative to discuss options to reduce your usag
 
 | Recurso | Descrição |
 | --- | --- |
-| Correção de direitos de licença | A variável [!UICONTROL Uso da licença] o painel de dados e os dados de licença individuais dos clientes foram atualizados para resolver discrepâncias anteriores entre os direitos de licença registrados nas Ordens de venda e aqueles originalmente relatados na Experience Platform [!UICONTROL Uso da licença] painel. As atualizações de dados de licenças individuais ocorrerão em fases, entre junho de 2023 e 11 de junho de 2023. Os valores de uso reais permanecem precisos.<br><br>O Experience Platform fornece vários recursos para gerenciar o volume de uso:<br><ul><li>[Revisar e aplicar as práticas recomendadas para gerenciar o uso de dados e licenças](https://experienceleague.adobe.com/docs/experience-platform/landing/license/data-management-best-practices.html).</li><li>Aplicar regras e condições de filtragem a [incluir ou excluir seletivamente dados da assimilação para o Perfil do cliente em tempo real](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html#filtering-for-profile) para dados do Analytics antes de serem assimilados no Perfil.</li><li>[Entre em contato com o suporte de Adobe para aplicar tempos de expiração para Perfis pseudônimos.](https://experienceleague.adobe.com/docs/experience-platform/profile/pseudonymous-profiles.html)</li><li>[Entre em contato com o suporte ao Adobe para ativar as expirações do evento de experiência nos conjuntos de dados desejados.](https://experienceleague.adobe.com/docs/experience-platform/profile/event-expirations.html)</li><li>Entre em contato com seu representante da Adobe para discutir as opções para aumentar seus direitos de licença.</li></ul> |
+| Correção de direitos de licença | O painel [!UICONTROL Uso da licença] e os dados de licença individuais de clientes foram atualizados para resolver discrepâncias anteriores entre os direitos de licença registrados nas ordens de venda e aqueles originalmente relatados no painel [!UICONTROL Uso da licença] da Experience Platform. As atualizações de dados de licenças individuais ocorrerão em fases, entre o ínicio de junho de 2023 até o dia 11 desse mesmo mês. Os valores de uso reais permanecem precisos.<br><br>A Experience Platform fornece vários recursos para gerenciar o volume de uso:<br><ul><li>[Revisar e aplicar as práticas recomendadas para gerenciar o uso de dados e licenças](https://experienceleague.adobe.com/docs/experience-platform/landing/license/data-management-best-practices.html?lang=pt-BR).</li><li>Aplicar regras e condições de filtragem para [incluir ou excluir seletivamente dados da assimilação no perfil do cliente em tempo real](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=pt-BR#filtering-for-profile) para dados do Analytics, antes que sejam assimilados no perfil.</li><li>[Entre em contato com o suporte da Adobe para aplicar prazos de expiração para perfis pseudônimos.](https://experienceleague.adobe.com/docs/experience-platform/profile/pseudonymous-profiles.html?lang=pt-BR)</li><li>[Entre em contato com o suporte da Adobe para habilitar as expirações de evento de experiência nos conjuntos de dados desejados.](https://experienceleague.adobe.com/docs/experience-platform/profile/event-expirations.html?lang=pt-BR)</li><li>Entre em contato com a pessoa representante da Adobe para discutir opções para aumentar seus direitos de licença.</li></ul> |
 
-Para obter mais informações sobre painéis, incluindo como conceder permissões de acesso e criar widgets personalizados, comece lendo o [visão geral dos painéis](../../dashboards/home.md).
+Para obter mais informações sobre painéis, incluindo como conceder permissões de acesso e criar widgets personalizados, comece lendo a [visão geral dos painéis](../../dashboards/home.md).
 
-## Coleta de dados {#data-collection}
+## Coleção de dados {#data-collection}
 
-A Adobe Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente do lado do cliente e enviá-los à Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não Adobe.
+A Adobe Experience Platform fornece um conjunto de tecnologias que permitem coletar dados da experiência do cliente e enviá-los à Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos da Adobe ou de outras empresas.
 
 **Recursos novos ou atualizados**
 
 | Recurso | Descrição |
 | --- | --- |
-| [!DNL Twitter] extensão da API de conversões | A variável [[!DNL Twitter] API de conversões](../../tags/extensions/server/twitter/overview.md) a extensão de encaminhamento de eventos permite encaminhar dados do evento do lado do servidor, em tempo real, para conversões de eventos usando o [!DNL Twitter] API de conversões. |
-| Assistência de caminho do elemento de dados | Determinar o caminho do elemento de dados na variável [Extensão principal](../../tags/extensions/client/core/overview.md) Agora está mais fácil do que nunca. Esse aprimoramento fornece um formulário guiado para ajudar você a selecionar e formatar o caminho de elemento de dados correto. |
+| Extensão da API de conversões do [!DNL Twitter] | A extensão de encaminhamento de evento da [[!DNL Twitter] API de conversões](../../tags/extensions/server/twitter/overview.md) permite encaminhar dados do evento do lado do servidor (em tempo real) para conversões de eventos usando a API de conversões do [!DNL Twitter]. |
+| Assistência de caminho de elemento de dados | Determinar o caminho do elemento de dados na [extensão principal](../../tags/extensions/client/core/overview.md) agora está mais fácil do que nunca. Esse aprimoramento fornece um formulário guiado para ajudar você a selecionar e formatar o caminho de elemento de dados correto. |
 
 {style="table-layout:auto"}
 
-Para saber mais sobre coleções de dados, leia o [visão geral das coleções de dados](../../tags/home.md).
+Para saber mais sobre coleções de dados, leia a [visão geral das coleções de dados](../../tags/home.md).
 
 ## Governança de dados {#data-governance}
 
-O Adobe Experience Platform Data Governance é uma série de estratégias e tecnologias usadas para gerenciar dados de clientes e garantir conformidade com normas, restrições e políticas aplicáveis ao uso de dados. Ele desempenha um papel fundamental no Experience Platform em vários níveis, incluindo catalogação, linhagem de dados, rotulagem de uso de dados, políticas de acesso a dados e controle de acesso a dados para ações de marketing.
+A Governança de dados da Adobe Experience Platform é uma série de estratégias e tecnologias usadas para gerenciar dados de clientes e garantir a conformidade com regulamentos, restrições e políticas aplicáveis ao uso de dados. Ela desempenha uma função essencial na Experience Platform em vários níveis, incluindo catalogação, linhagem de dados, rotulagem de uso de dados, políticas de acesso de dados e controle de acesso a dados de ações de marketing.
 
 **Novos recursos**
 
 | Recurso | Descrição |
 | --- | --- |
-| Descontinuação da rotulagem do nível de campo do conjunto de dados | A capacidade de aplicar rótulos a campos individuais foi movida de conjuntos de dados para esquemas. Isso permite centralizar o gerenciamento de rótulos de campo upstream para governança de dados, consentimento e controle de acesso. Os rótulos de campo do conjunto de dados aplicados anteriormente terão suporte temporário por meio da interface do usuário do Experience Platform. Todos os rótulos de campo do conjunto de dados existentes precisam ser migrados manualmente para os rótulos de campo do esquema até 31 de maio de 2024. Leia as [guia completo de governança de dados](../../data-governance/e2e.md) para obter mais informações sobre a migração de rótulos. |
+| Descontinuação da rotulagem por nível de campo do conjunto de dados | A capacidade de aplicar rótulos a campos individuais foi movida dos conjuntos de dados para os esquemas. Isso permite centralizar o gerenciamento de rótulos de campo no upstream para governança de dados, consentimento e controle de acesso. Os rótulos de campo do conjunto de dados aplicados anteriormente terão suporte temporário por meio da interface da Experience Platform. Todos os rótulos de campo de conjunto de dados existentes precisam ser migrados manualmente para os rótulos de campo de esquema até 31 de maio de 2024. Consulte o [guia completo de governança de dados](../../data-governance/e2e.md) para obter mais informações sobre a migração de rótulos. |
 
 {style="table-layout:auto"}
 
-Para saber mais sobre governança de dados, leia o [visão geral da governança de dados](../../data-governance/home.md).
+Para saber mais sobre governança de dados, leia a [visão geral da governança de dados](../../data-governance/home.md).
 
 ## Assimilação de dados {#data-ingestion}
 
-O Adobe Experience Platform fornece um conjunto avançado de recursos para assimilar qualquer tipo e qualquer latência de dados. Você pode assimilar usando APIs de lote ou transmissão, usando fontes construídas em Adobe, parceiros de integração de dados ou a interface do usuário do Adobe Experience Platform.
+A Adobe Experience Platform fornece um conjunto avançado de recursos para assimilar qualquer tipo e qualquer latência de dados. Você pode assimilar usando APIs de lote ou transmissão, origens construídas pela Adobe, parceiros de integração de dados ou a interface da Adobe Experience Platform.
 
 **Recursos atualizados**
 
 | Recurso | Descrição |
 | --- | --- |
-| Disponibilidade beta de modelos de assimilação de dados | Os modelos de assimilação de dados fornecem aos arquitetos e engenheiros de dados modelos padrão e ferramentas de automação para acelerar o processo de assimilação de dados, incluindo a criação de esquemas e conjuntos de dados e a configuração de regras de mapeamento. Os modelos de assimilação de dados estão disponíveis para o [[!DNL Marketo Engage]](../../sources/connectors/adobe-applications/marketo/marketo.md), [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) e [[!DNL Microsoft Dynamics]](../../sources/connectors/crm/ms-dynamics.md) fontes. Para obter mais informações, leia o guia em [uso de modelos na interface](../../sources/tutorials/ui/templates.md). |
+| Disponibilidade beta de modelos de assimilação de dados | Os modelos de assimilação de dados fornecem aos arquitetos e engenheiros de dados os modelos padrão e ferramentas de automação necessários para acelerar o processo de assimilação de dados, incluindo a criação de esquemas e conjuntos de dados e a configuração de regras de mapeamento. No momento, os modelos de assimilação de dados estão disponíveis para as origens [[!DNL Marketo Engage]](../../sources/connectors/adobe-applications/marketo/marketo.md), [[!DNL Salesforce]](../../sources/connectors/crm/salesforce.md) e [[!DNL Microsoft Dynamics]](../../sources/connectors/crm/ms-dynamics.md). Para obter mais informações, leia o guia de [uso de modelos na interface](../../sources/tutorials/ui/templates.md). |
 
-Para saber mais sobre a assimilação de dados, leia o [visão geral da assimilação de dados](../../ingestion/home.md).
+Para saber mais sobre assimilação de dados, leia a [visão geral da assimilação de dados](../../ingestion/home.md).
 
 ## Destinos (atualizado em 31 de maio) {#destinations}
 
-[!DNL Destinations] são integrações pré-criadas com plataformas de destino que permitem a ativação contínua de dados do Adobe Experience Platform. Você pode usar destinos para ativar seus dados conhecidos e desconhecidos para campanhas de marketing entre canais, campanhas por email, publicidade direcionada e muitos outros casos de uso.
+[!DNL Destinations] são integrações pré-construídas com plataformas de destino que permitem a ativação perfeita de dados da Adobe Experience Platform. É possível usar destinos para ativar seus dados conhecidos e desconhecidos para campanhas de marketing entre canais, campanhas de email, publicidade direcionada e muitos outros casos de uso.
 
 **Novos destinos** {#new-destinations}
 
 | Destino | Descrição |
 | ----------- | ----------- |
-| **[[!UICONTROL Categorias de interesse do Mailchimp]](../../destinations/catalog/email-marketing/mailchimp-interest-categories.md)** | **[!UICONTROL Mailchimp]** é uma plataforma de automação de marketing popular e um serviço de marketing por email usado pelas empresas para gerenciar e conversar com contatos (clientes, clientes ou outras partes interessadas) usando listas de endereçamento e campanhas de marketing por email. Use esse conector para classificar seus contatos com base em seus interesses e preferências. |
+| **[[!UICONTROL Categorias de interesse do Mailchimp]](../../destinations/catalog/email-marketing/mailchimp-interest-categories.md)** | O **[!UICONTROL Mailchimp]** é uma plataforma popular de automação de marketing e serviço de marketing por email usada por empresas para gerenciar e conversar com contatos (clientes ou outras partes interessadas) a partir de listas de email e campanhas de marketing por email. Use esse conector para classificar seus contatos com base em seus interesses e preferências. |
 
 {style="table-layout:auto"}
 
-**Funcionalidade nova ou atualizada** {#destinations-new-updated-functionality}
+**Funcionalidades novas ou atualizadas** {#destinations-new-updated-functionality}
 
 | Funcionalidade | Descrição |
 | ----------- | ----------- |
-| Disponibilidade geral da personalização baseada em atributos por meio do [Adobe Target](../../destinations/catalog/personalization/adobe-target-connection.md) e [Personalização personalizada](../../destinations/catalog/personalization/custom-personalization.md) destinos. | Aproveite os atributos de perfil em tempo real para fornecer personalização da Web e móvel individualizada, por meio do Adobe Target ou de outros destinos de personalização personalizados no Experience Platform. Leia o [documentação dedicada](../../destinations/ui/activate-edge-personalization-destinations.md) e a variável [Perguntas frequentes](/help/destinations/destinations-faq.md#same-next-page-personalization) para obter mais detalhes. |
-| Suporte para Destination SDK para agrupar públicos exportados com base na política de mesclagem. | Ao criar um destino baseado em arquivos com o Destination SDK, agora é possível configurar o agrupamento de públicos-alvo exportados em um ou vários arquivos, com base na política de mesclagem. <br><br> Além disso, agora você pode incluir a ID da política de mesclagem e o nome da política de mesclagem nos nomes de arquivo exportados usando as macros de modelo dedicadas. <br><br>Consulte a [documentação de configuração do lote](../../destinations/destination-sdk/functionality/destination-configuration/batch-configuration.md) para obter mais detalhes sobre como usar o `segmentGroupingEnabled` e as novas macros de modelo de nome de arquivo. |
-| Incluir arquivo de manifesto em exportações para destinos de armazenamento na nuvem beta | Agora é possível incluir um arquivo JSON de manifesto que contenha informações sobre o local de exportação, o tamanho da exportação e muito mais, ao exportar dados para os seis destinos beta do armazenamento na nuvem - [(Beta) Amazon S3](/help/destinations/catalog/cloud-storage/amazon-s3.md), [(Beta) Azure Blob](/help/destinations/catalog/cloud-storage/azure-blob.md), [(Beta) Armazenamento do Azure Data Lake Gen2](/help/destinations/catalog/cloud-storage/adls-gen2.md), [(Beta) Zona de aterrissagem de dados](/help/destinations/catalog/cloud-storage/data-landing-zone.md), [(Beta) Armazenamento em nuvem do Google](/help/destinations/catalog/cloud-storage/google-cloud-storage.md), [(Beta) SFTP](/help/destinations/catalog/cloud-storage/sftp.md). <br><br> Obtenha mais informações no **[!UICONTROL Detalhes do destino]** das páginas vinculadas acima. |
+| Disponibilidade geral da personalização baseada em atributos por meio dos destinos do [Adobe Target](../../destinations/catalog/personalization/adobe-target-connection.md) e da [Personalização individual](../../destinations/catalog/personalization/custom-personalization.md). | Aproveite os atributos de perfil em tempo real para oferecer uma personalização individual na Web e em dispositivos móveis, utilizando o Adobe Target ou outros destinos de personalização individual da Experience Platform. Leia a [documentação dedicada](../../destinations/ui/activate-edge-personalization-destinations.md) e as [perguntas frequentes](/help/destinations/destinations-faq.md#same-next-page-personalization) para obter mais detalhes. |
+| Suporte ao Destination SDK para agrupar públicos-alvo exportados com base na política de mesclagem. | Ao criar um destino baseado em arquivo com o Destination SDK, agora é possível configurar o agrupamento de públicos-alvo exportados em um ou vários arquivos, com base na política de mesclagem. <br><br> Além disso, agora você pode incluir a ID e o nome da política de mesclagem nos nomes dos arquivos exportados, usando as macros de modelo dedicadas. <br><br>Consulte a [documentação de configuração em lote](../../destinations/destination-sdk/functionality/destination-configuration/batch-configuration.md) para obter mais detalhes sobre como usar o parâmetro `segmentGroupingEnabled` e as novas macros de modelo de nome de arquivo. |
+| Incluir arquivo de manifesto em exportações para destinos beta de armazenamento na nuvem | Agora é possível incluir um arquivo JSON de manifesto que contenha informações sobre o local de exportação, o tamanho da exportação e muito mais ao exportar dados para os seis destinos beta de armazenamento na nuvem: [(Beta) Amazon S3](/help/destinations/catalog/cloud-storage/amazon-s3.md), [(Beta) Azure Blob](/help/destinations/catalog/cloud-storage/azure-blob.md), [(Beta) Azure Data Lake Storage Gen2](/help/destinations/catalog/cloud-storage/adls-gen2.md), [(Beta) Data Landing Zone](/help/destinations/catalog/cloud-storage/data-landing-zone.md), [(Beta) Google Cloud Storage](/help/destinations/catalog/cloud-storage/google-cloud-storage.md) e [(Beta) SFTP](/help/destinations/catalog/cloud-storage/sftp.md). <br><br> Obtenha mais informações na seção **[!UICONTROL Detalhes do destino]** das páginas vinculadas acima. |
 
 {style="table-layout:auto"}
 
 **Correções e aprimoramentos** {#destinations-fixes-and-enhancements}
 
-- Corrigimos uma limitação no destino de armazenamento na nuvem SFTP (Beta), em que os usuários não conseguiam personalizar o valor do parâmetro Port. O valor agora pode ser editado ao configurar uma conexão de destino SFTP (Beta) por meio do [API](/help/destinations/api/activate-segments-file-based-destinations.md) ou [IU](/help/destinations/catalog/cloud-storage/sftp.md#authentication-information).
+- Corrigimos uma limitação no destino de armazenamento na nuvem (Beta) SFTP, que impedia a personalização do valor do parâmetro Porta. O valor agora pode ser editado ao configurar uma conexão de destino (Beta) SFTP por meio da [API](/help/destinations/api/activate-segments-file-based-destinations.md) ou da [interface](/help/destinations/catalog/cloud-storage/sftp.md#authentication-information).
 
-Para obter informações mais gerais sobre destinos, consulte o [visão geral dos destinos](../../destinations/home.md).
+Para obter informações mais gerais sobre destinos, consulte a [visão geral de destinos](../../destinations/home.md).
 
 ## Experience Data Model (XDM) {#xdm}
 
-O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados trazidos para o Adobe Experience Platform. Seguindo os padrões XDM, todos os dados de experiência do cliente podem ser incorporados a uma representação comum para fornecer insights de maneira mais rápida e integrada. Você pode obter insights valiosos das ações do cliente, definir públicos do cliente por meio de segmentos e usar atributos do cliente para fins de personalização.
+O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados inseridos na Adobe Experience Platform. Ao aderir aos padrões do XDM, todos os dados de experiência do cliente podem ser incorporados em uma representação comum para fornecer insights de maneira mais rápida e integrada. Você pode obter insights valiosos sobre ações de clientes, definir públicos-alvo por meio de segmentos e usar atributos de clientes para fins de personalização.
 
-**Componentes XDM atualizados**
+**Componentes de XDM atualizados**
 
 | Tipo de componente | Nome | Descrição |
 | --- | --- | --- |
-| Grupo de campos | (Múltiplos) | Vários campos para [Item de oferta](https://github.com/adobe/xdm/pull/1720/files) foram atualizadas para remover uma hierarquia dupla do esquema. |
-| Grupo de campos | [[!UICONTROL Perfil de cliente potencial individual XDM]](https://github.com/adobe/xdm/pull/1721/files) | A variável `partnerProspect` A opção para tags de metadados foi adicionada à variável [!UICONTROL Perfil de cliente potencial individual XDM] classe. |
-| Tipo de dados | (Múltiplos) | Vários campos foram adicionados para o [[!UICONTROL Informações de detalhes de mídia]](https://github.com/adobe/xdm/pull/1716/files) tipo de dados. |
+| Grupo de campos | (Vários) | Vários campos do [Item de oferta](https://github.com/adobe/xdm/pull/1720/files) foram atualizados para remover uma hierarquia dupla do esquema. |
+| Grupo de campos | [[!UICONTROL Perfil individual de XDM em potencial]](https://github.com/adobe/xdm/pull/1721/files) | A opção `partnerProspect` para tags de metadados foi adicionada à classe [!UICONTROL Perfil individual de XDM em potencial]. |
+| Tipo de dados | (Vários) | Vários campos foram adicionados para o tipo de dados [[!UICONTROL Informações de detalhes de mídia]](https://github.com/adobe/xdm/pull/1716/files). |
 | Tipo de dados | [[!UICONTROL Informações de detalhes da sessão]](https://github.com/adobe/xdm/pull/1716/files) | Um novo campo foi adicionado para indicar se um redirecionamento ocorreu. |
 | Grupo de campos | [[!UICONTROL Detalhes de interação do MediaAnalytics]](https://github.com/adobe/xdm/pull/1716/files) | Um novo campo relacionado aos relatórios de mídia foi adicionado. |
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre o XDM na Platform, leia o [Visão geral do sistema XDM](../../xdm/home.md).
+Para obter mais informações sobre XDM na Platform, leia a [Visão geral do sistema de XDM](../../xdm/home.md).
 
 ## Identity Service {#identity-service}
 
-O serviço de identidade da Adobe Experience Platform fornece uma visão abrangente dos clientes e do comportamento deles ao unir as identidades de vários dispositivos e sistemas, permitindo que você forneça experiências digitais pessoais e de impacto em tempo real.
+O Identity Service da Adobe Experience Platform fornece uma visão abrangente dos clientes e seu comportamento ao unir identidades entre dispositivos e sistemas, permitindo fornecer experiências digitais pessoais de impacto em tempo real.
 
 **Atualizar recursos**
 
 | Recurso | Descrição |
 | --- | --- |
-| Suporte para IDs de parceiros nos aplicativos da Adobe Experience Cloud [!BADGE Beta]{type=Informative} | As IDs de parceiro agora estão disponíveis no Serviço de identidade. IDs de parceiros são identificadores usados por parceiros de dados para representar pessoas. No Real-time Customer Data Platform, as IDs de parceiros são usadas principalmente para ativar mais o público-alvo e enriquecer dados. As IDs de parceiros não são armazenadas no gráfico de identidade. Para obter mais informações, leia a documentação em [tipos de identidade](../../identity-service/namespaces.md#identity-types). |
+| Suporte para IDs de parceiro nos aplicativos da Adobe Experience Cloud [!BADGE Beta]{type=Informative} | As IDs de parceiro agora estão disponíveis no Identity Service. IDs de parceiro são identificadores usados por parceiros de dados para representar pessoas. Na Real-time Customer Data Platform, as IDs de parceiro são usadas principalmente para uma ativação de público-alvo expandida e o enriquecimento de dados. As IDs de parceiro não são armazenadas no gráfico de identidade. Para obter mais informações, leia a documentação sobre [tipos de identidade](../../identity-service/namespaces.md#identity-types). |
 
-Para saber mais sobre o Serviço de identidade, leia a [Visão geral do serviço de identidade](../../identity-service/home.md)
+Para saber mais sobre o Identity Service, leia a [Visão geral do Identity Service](../../identity-service/home.md)
 
-## Serviço de query {#query-service}
+## Query Service {#query-service}
 
-O Serviço de consulta permite usar o SQL padrão para consultar dados no Adobe Experience Platform [!DNL data lake]. Você pode unir qualquer conjunto de dados do data lake e capturar os resultados da consulta como um novo conjunto de dados para usar em relatórios, no Data Science Workspace ou para assimilação no Perfil do cliente em tempo real.
+O Query Service permite usar SQL padrão para consultar dados no [!DNL data lake] da Adobe Experience Platform. É possível unir qualquer conjunto de dados do data lake e capturar os resultados de consultas como um novo conjunto de dados para usar em relatórios, no espaço de trabalho de ciência de dados ou para assimilação no perfil do cliente em tempo real.
 
 **Recursos atualizados**
 
 | Recurso | Descrição |
 | --- | --- |
-| Calcular estatísticas em nível de coluna em conjuntos de dados ADLS | A variável `ANALYZE TABLE` foi estendido com o `COMPUTE STATISTICS` e `SHOW STATISTICS` Comandos SQL. Agora é possível calcular estatísticas para um subconjunto de um conjunto de dados ADLS ou para determinadas colunas nesse conjunto de dados. Para obter mais informações, leia a [guia de cálculo de estatísticas do conjunto de dados](../../query-service/essential-concepts/dataset-statistics.md). |
+| Calcular estatísticas em nível de coluna nos conjuntos de dados ADLS | O comando `ANALYZE TABLE` recebeu dois comandos de SQL adicionais: `COMPUTE STATISTICS` e `SHOW STATISTICS`. Agora é possível calcular estatísticas para um subconjunto de um conjunto de dados ADLS ou para determinadas colunas nesse conjunto de dados. Para obter mais informações, leia o [guia de computação de estatísticas do conjunto de dados](../../query-service/essential-concepts/dataset-statistics.md). |
 
 {style="table-layout:auto"}
 
-Para saber mais sobre os Serviços de consulta, leia a [Visão geral do Serviço de consulta](../../query-service/home.md).
+Para saber mais sobre o Query Service, leia a [Visão geral do Query Service](../../query-service/home.md).
 
 ## Fontes {#sources}
 
-O Adobe Experience Platform pode assimilar dados de fontes externas e permite estruturar, rotular e aprimorar esses dados usando os serviços da plataforma. Você pode assimilar dados de várias fontes, como aplicativos Adobe, armazenamento baseado em nuvem, software de terceiros e seu sistema de CRM.
+A Adobe Experience Platform pode assimilar dados de fontes externas e permite estruturar, rotular e aprimorar esses dados usando os serviços da Platform. É possível assimilar dados de várias fontes, como aplicativos da Adobe, armazenamento na nuvem, software de terceiros e seu sistema de CRM.
 
-O Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir tempos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
+A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
 
 **Recursos atualizados**
 
 | Recurso | Descrição |
 | --- | --- |
-| Suporte de API para transmissão de dados de um [!DNL Snowflake] banco de dados | Agora é possível transmitir dados de um [[!DNL Snowflake] origem](../../sources/connectors/databases/snowflake-streaming.md) usando o [!DNL Flow Service] API. |
-| Suporte à API ampliada para modo de rascunho | Agora você pode pausar e salvar seu progresso durante o workflow de origens ao usar o [!DNL Flow Service] a qualquer momento. Use o `mode=draft` estado para salvar suas conexões base, de origem e de destino como rascunhos. Todas as entidades de rascunho podem ser revisitadas para conclusão posteriormente. Leia o guia em [configuração do [!DNL Flow Service] entidades para um estado de rascunho](../../sources/tutorials/api/draft.md) para obter mais informações. |
-| Disponibilidade geral do [!DNL Salesforce Marketing Cloud] origem | A variável [[!DNL Salesforce Marketing Cloud source] agora está em disponibilidade geral](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md). Use esta fonte para trazer seus [!DNL Salesforce Marketing Cloud] dados para Experience Platform. |
-| [!DNL Google Ads] atualizações de autenticação | Agora você pode fornecer uma ID de cliente de logon ao autenticar seu [!DNL Google Ads] conta de origem para buscar dados de relatório de um cliente operacional específico. Leia o [[!DNL Google Ads] documentação de origem](../../sources/connectors/advertising/ads.md) para obter mais informações. |
-| [!DNL Google PubSub] atualizações de autenticação | Agora você pode definir privilégios de acesso para o seu [!DNL Google PubSub] origem ao criar uma nova conta. Use a autenticação baseada em projeto para permitir o acesso no nível raiz ou use a autenticação baseada em assinatura e tópico para restringir o acesso a um tópico específico e fluxo de assinatura. Leia o [[!DNL Google PubSub] documentação de origem](../../sources/connectors/cloud-storage/google-pubsub.md) para obter mais informações. |
-| Novos parâmetros de campo de paginação para `type=PAGE` em Fontes de autoatendimento (SDK em lote) | Agora você pode usar `initialPageIndex` e `endPageIndex` ao integrar uma origem com `type=PAGE` por meio do SDK em lote. <ul><li>`initialPageIndex`: esse parâmetro permite definir o número de página a partir do qual a paginação começa. </li><li>`endPageIndex`: esse parâmetro permite estabelecer uma condição final e interromper a paginação.</li></ul> Para obter mais informações sobre esses novos parâmetros, leia a [Documentação do SDK em lote de fontes de autoatendimento](../../sources/sources-sdk/config/sourcespec.md#page). |
-| Suporte à interface do usuário para modo de rascunho | Agora é possível pausar e salvar seu progresso durante o workflow de origens por meio da interface do usuário. É possível selecionar **[!UICONTROL Salvar como rascunho]** durante as etapas de detalhe, mapeamento e agendamento do fluxo de dados do workflow para salvar seu fluxo de dados como rascunho para conclusão posterior. Leia o guia em [como salvar fluxos de dados como rascunhos na interface do usuário](../../sources/tutorials/ui/draft.md) para obter mais informações. |
+| Suporte de API para transmissão de dados de um banco de dados do [!DNL Snowflake] | Agora é possível transmitir dados de uma origem do [[!DNL Snowflake] ](../../sources/connectors/databases/snowflake-streaming.md) usando a API [!DNL Flow Service]. |
+| Suporte de API ampliado para o modo de rascunho | Agora você pode pausar e salvar o seu progresso durante o fluxo de trabalho de origens, utilizando a API [!DNL Flow Service] a qualquer momento. Use o estado `mode=draft` para salvar suas conexões de base, origem e destino como rascunhos. Todas as entidades de rascunho podem ser revisitadas e concluídas posteriormente. Leia o guia sobre [configurar entidades do  [!DNL Flow Service]  para um estado de rascunho](../../sources/tutorials/api/draft.md) para obter mais informações. |
+| Disponibilidade geral da origem do [!DNL Salesforce Marketing Cloud]  | A [[!DNL Salesforce Marketing Cloud source]  agora está em disponibilidade geral](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md). Use esta origem para trazer seus dados da [!DNL Salesforce Marketing Cloud] para a Experience Platform. |
+| Atualizações de autenticação do [!DNL Google Ads] | Agora você pode fornecer uma ID de cliente de logon ao autenticar sua conta de origem do [!DNL Google Ads] para buscar dados de relatório de um cliente operacional específico. Leia a documentação da origem](../../sources/connectors/advertising/ads.md) do [[!DNL Google Ads]  para obter mais informações. |
+| Atualizações de autenticação do [!DNL Google PubSub] | Agora você pode definir privilégios de acesso para a sua origem do [!DNL Google PubSub] ao criar uma nova conta. Use a autenticação baseada em projeto para permitir o acesso no nível raiz ou use a autenticação baseada em tópico e assinatura para restringir o acesso a um fluxo específico de tópico e assinatura. Leia a documentação da origem](../../sources/connectors/cloud-storage/google-pubsub.md) do [[!DNL Google PubSub]  para obter mais informações. |
+| Novos parâmetros de campo de paginação para `type=PAGE` nas origens de autoatendimento (SDK do lote) | Agora você pode usar `initialPageIndex` e `endPageIndex` ao integrar uma origem com `type=PAGE` por meio do SDK do lote. <ul><li>`initialPageIndex`: esse parâmetro permite definir o número da página a partir da qual a paginação começa. </li><li>`endPageIndex`: esse parâmetro permite estabelecer uma condição final e interromper a paginação.</li></ul> Para obter mais informações sobre esses novos parâmetros, leia a [documentação sobre origens de autoatendimento do SDK do lote](../../sources/sources-sdk/config/sourcespec.md#page). |
+| Suporte da interface para o modo de rascunho | Agora é possível pausar e salvar o seu progresso durante o fluxo de trabalho de origens por meio da interface. É possível selecionar **[!UICONTROL Salvar como rascunho]** durante as etapas de detalhamento, mapeamento e agendamento do fluxo de dados, permitindo salvar o seu fluxo de dados como rascunho para ser concluído posteriormente. Leia o guia sobre [como salvar fluxos de dados como rascunhos na interface](../../sources/tutorials/ui/draft.md) para obter mais informações. |
 
 {style="table-layout:auto"}
 
-Para saber mais sobre fontes, leia o [visão geral das origens](../../sources/home.md).
+Para saber mais sobre origens, leia a [visão geral de origens](../../sources/home.md).
